--- a/BlazorApp/Components/App.razor
+++ b/BlazorApp/Components/App.razor
@@ -1,4 +1,5 @@
 ﻿@using BlazorApp.Components.Layout
+@using BlazorApp.Components.Pages
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly" PreferExactMatches="@true">
         <Found Context="routeData">
