--- a/BlazorApp/Components/Pages/Newses/NewsDetail.razor
+++ b/BlazorApp/Components/Pages/Newses/NewsDetail.razor
@@ -1,8 +1,8 @@
 ﻿@page "/newses-list/{Id:int}"
-@using Blazor.Business.Repository.IRepository
+@using Application.IService
 @using Application.DTOs
 @using Domin.Entites
-@inject INewsRepository NewsRepository
+@inject INewsService NewsService
 
 @if (NewsDto != null)
 {
@@ -66,7 +66,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        NewsDto = await NewsRepository.GetNewsById(Id.Value);
+        NewsDto = await NewsService.GetNewsById(Id.Value);
     }
 
 }
